# MaBoSS

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MaBoSS.env  README  README.md  check-requirements.sh  docker-compose.yml  make-package.sh
.github/workflows/: cmaboss-macos.yml  cmaboss-ubuntu.yml  cmaboss-windows.yml  maboss-macos.yml  maboss-ubuntu.yml  maboss-windows.yml  test-macosx.yml  test-ubuntu.yml  test-windows.yml
bindings/python/: maboss-ori.py  maboss.py  test_maboss.py
bindings/python/maboss/: atexit.py  comm.py  result.py  simul.py
cmake/Modules/: FindLIBSBML.cmake  FindLIBSEDML.cmake  FindLIBXML.cmake
conda/cmaboss/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml  run_test.bat  run_test.sh
conda/cmaboss-sbml/: meta.yaml
conda/maboss/: bld.bat  build.sh  meta.yaml  run_test.bat  run_test.sh
conda/maboss-sbml/: build.sh  meta.yaml
containers/apptainer/: maboss.def
containers/docker/: Dockerfile
containers/singularity/: Singularity
docker/: Dockerfile
engine/: README
engine/benchmark/: README.md  maboss_mpi_benchmark  maboss_mpi_benchmark_low  maboss_threads_benchmark  maboss_threads_benchmark_low  maboss_threads_benchmark_vlow
engine/binaries/linux-x86/: MaBoSS  MaBoSS-client  MaBoSS-server  MaBoSS_1024n  MaBoSS_1024n-server  MaBoSS_128n  MaBoSS_128n-server  MaBoSS_256n  MaBoSS_256n-server  MaBoSS_512n  MaBoSS_512n-server
engine/binaries/macos-x86/: MaBoSS  MaBoSS-client  MaBoSS-server  MaBoSS_1024n  MaBoSS_1024n-server  MaBoSS_128n  MaBoSS_128n-server  MaBoSS_256n  MaBoSS_256n-server  MaBoSS_512n  MaBoSS_512n-server
engine/examples/: metastasis-error.bnd  metastasis.cfg
engine/examples/Montagud_Prostate/: Montagud2021_Prostate_Cancer_large.cfg  Montagud2022_Prostate_Cancer.cfg
engine/examples/Sizek/: sizek.cfg  sizek_large.cfg  sizek_medium.cfg  sizek_xlarge.cfg  sizek_xxlarge.cfg
engine/examples/openmp/: test.bnet  test.cfg  test2.bnd  test2.cfg  test2_mutant.cfg
engine/examples/popmaboss/: Assymetric.cfg  Assymetric.pbnd  Fork.cfg  Fork.pcfg  ICD_phenomenological_TDC_ratio.cfg  Log_Growth.cfg  Toy.cfg  Toy.pbnd
engine/examples/sedml/: cell_fate.sbml  cell_fate.sedml  cell_fate_repeated_task.sedml  cell_fate_states.sedml  run_cmaboss.ipynb  run_sedml_cmaboss.ipynb  run_sedml_cmaboss_repeatedtask.ipynb  run_sedml_cmaboss_states.ipynb  write_sedml_state_trajectory.ipynb  write_sedml_trajectory.ipynb  write_sedml_trajectory_repeatedtask.ipynb
engine/python/: CMakeLists.txt  README.md  build-wheels.sh  build-wheels_2_24.sh  maboss_cfg.cpp  maboss_commons.h  maboss_module.cpp  maboss_net.cpp  maboss_net.h  maboss_res.cpp  maboss_resfinal.cpp  maboss_sim.cpp  popmaboss_res.cpp  popmaboss_sim.cpp  pyproject.toml  setup.py  test.py  test_128n.py
engine/python/cmaboss/: __init__.py  maboss_cfg.cpp  maboss_cfg.h  maboss_commons.h  maboss_module.cpp  maboss_net.cpp  maboss_net.h  maboss_node.cpp  maboss_node.h  maboss_param.cpp  maboss_param.h  maboss_res.cpp  maboss_res.h  maboss_resfinal.cpp  maboss_resfinal.h  maboss_sim.cpp  maboss_sim.h  popmaboss_cfg.cpp  popmaboss_net.cpp  popmaboss_net.h  popmaboss_res.cpp  popmaboss_res.h  popmaboss_sim.cpp  sedml_sim.cpp  sedml_sim.h
engine/python/cmaboss_1024n/: __init__.py
engine/python/cmaboss_128n/: __init__.py
engine/python/cmaboss_256n/: __init__.py
engine/python/cmaboss_512n/: __init__.py
engine/python/cmaboss_dn/: __init__.py
engine/python/src/: CMakeLists.txt  maboss_cfg.cpp  maboss_cfg.h  maboss_commons.h  maboss_module.cpp  maboss_net.cpp  maboss_net.h  maboss_node.cpp  maboss_node.h  maboss_param.cpp  maboss_param.h  maboss_res.cpp  maboss_res.h  maboss_resfinal.cpp  maboss_resfinal.h  maboss_sim.cpp  maboss_sim.h  popmaboss_net.cpp  popmaboss_net.h  popmaboss_node.cpp  popmaboss_node.h  popmaboss_res.cpp  popmaboss_res.h  popmaboss_sim.cpp  popmaboss_sim.h  sedml_sim.cpp  sedml_sim.h
engine/src/: BNException.cc  BNException.h  BooleanGrammar.cc  BooleanGrammar.h  BooleanGrammar.l  BooleanGrammar.y  BooleanNetwork.cc  BooleanNetwork.h  BuiltinFunctions.cc  CMakeLists.txt  Client.cc  Client.h  Cumulator.cc  Cumulator.h  CustomPopProbTrajDisplayer.h  DataStreamer.cc  DataStreamer.h  EnsembleEngine.cc  EnsembleEngine.h  Expressions.cc  Expressions.h  FinalStateDisplayer.cc  FinalStateDisplayer.h  FinalStateSimulationEngine.cc  FinalStateSimulationEngine.h  FixedPointDisplayer.cc  FixedPointDisplayer.h  FixedPointEngine.cc  FixedPointEngine.h  Function.cc  Function.h  GenericCumulator.h  IStates.cc  IStates.h  LogicalExprGen.cc  MBDynBitset.cc  MBDynBitset.h  MPI_headers.h  MaBEstEngine.cc  MaBEstEngine.h  (+65 more)
engine/src/displayers/: CMakeLists.txt  CustomPopProbTrajDisplayer.cc  (+9 more)
engine/src/parsers/: BooleanGrammar.h  BooleanGrammar.l  CMakeLists.txt  RunConfigGrammar.l  RunConfigGrammar.y
engine/src/rpc/: CMakeLists.txt  Client.cc  DataStreamer.cc  MaBoSS-RPC.h  MaBoSS-client.cc  MaBoSS-server.cc  Server.cc  Server.h
engine/tests/: cellcycle.bnd  compare_fixpoints.py  compare_probtrajs.py  compare_statdist.py  share.sh  test-bnet.sh  test-cellcycle.bat  test-cellcycle.sh  test-container.sh  test-ensemble.bat  test-ensemble.sh  test-ewing.sh  test-mpi-cellcycle.sh  test-mpi-ensemble.sh  test-mpi-ewing.sh  test-mpi-observed_graph.sh  test-mpi-popmaboss.sh  test-observed_graph.sh  test-popmaboss.bat  test-popmaboss.sh  test-prngs.sh  test-rngs.sh  test-sbml.sh  test-server.sh  test-user_func.sh  test.py  test_128n.py
scripts/: build_libsbml.bat  build_libsbml.sh  install_libsbml.bat  install_libsbml.sh  run_cmaboss_tests.sh  run_mpi_tests.sh  run_sbml_tests.sh  run_tests.sh  run_userfunc_tests.sh
tools/: MBSS_DrugSim.py  MBSS_FormatTable.pl  MBSS_InitCondFromTrajectory.pl  MBSS_MultipleSim.py  MBSS_MutBnd.pl  MBSS_MutBndCfg.pl  MBSS_PieChart.py  MBSS_PrepareProjectFile.pm  MBSS_PrepareProjectFile.sh  MBSS_PrepareProjectFilePieChart.py  MBSS_PrepareProjectFileTrajectoryFig.py  MBSS_SensitivityAnalysis.pl  MBSS_TrajectoryFig.py  UPMaBoSS
tutorial/Montagud_2021_Prostate_Cancer/: README.md
tutorial/Montagud_2022_Prostate_Cancer/: README.md
(+143 files in other folders)
