[build-system]
requires = [
    "scikit-build-core",
    "oldest-supported-numpy; python_version<'3.9'",
    "numpy>=2; python_version>='3.9'",
    "lxml"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.args = ["-DSBML=ON"]
build.verbose = true 

[project]
name = "cmaboss"
version = "1.0.0b29"
description = "Python wrapper for MaBoSS"
